RESOLVED FIXED215389
Fix Apple internal Mojave builds
https://bugs.webkit.org/show_bug.cgi?id=215389
Summary Fix Apple internal Mojave builds
Myles C. Maxfield
Reported 2020-08-11 13:27:10 PDT
Fix Apple internal Mojave builds
Attachments
Patch (1.67 KB, patch)
2020-08-11 13:27 PDT, Myles C. Maxfield
no flags
Myles C. Maxfield
Comment 1 2020-08-11 13:27:40 PDT
Myles C. Maxfield
Comment 2 2020-08-11 13:28:26 PDT
Radar WebKit Bug Importer
Comment 3 2020-08-11 13:29:16 PDT
Anders Carlsson
Comment 4 2020-08-12 07:31:28 PDT
Did you intend to mark this as r?
Note You need to log in before you can comment on or make changes to this bug.