Fix Apple internal Mojave builds https://bugs.webkit.org/show_bug.cgi?id=215389

Unreviewed build fix.

* pal/spi/cocoa/CoreTextSPI.h:

Canonical link: https://commits.webkit.org/228158@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@265512 268f45cc-cd09-0410-ab3c-d52691b4dbfc